Sistemato in html e css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Mail-Dadi</title>
 </head>
 <body>
-    
+    <section id="email">
+        <h1>Controllo E-Mail</h1>
+        <label for="input-email"></label>
+        <input type="email" name="input-email" id="input-email">
+        <button id="conferma">Conferma</button>
+        
+    </section>
+
+    <section id="dadi">
+        <h1>Gioco dei dadi</h1>
+        <button id="gioca">Gioca</button>
+    </section>
     <script src="js/main.js"></script>
 </body>
 </html>
